# python-playground

./: README.md  requirements.txt  setup.cfg
.github/workflows/: python_linter.yml
src/: main.py
