[metadata]
name = python_playground
version = 0.0.0
author = Federico Gnesotto
classifiers = Programming Language :: Python
#license = <license name, e.g. MIT>
#description = <A short description>
#long_description = file: README.rst
#author_email = <Optional: author e-mail>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =

[options.packages.find]
where=src